--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     </string-array>
     <string name="countdown_txt">3</string>
 
+    <string-array name="explanation">
+        <item>Tap when area is right!</item>
+    </string-array>
+
     <string-array name="dice">
         <item>@drawable/g1</item>
         <item>@drawable/g2</item>
