--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,20 +434,394 @@
         <item>Samoa</item>
         <item>Saint Helena</item>
     </string-array>
+    <string-array name="capitals">
+        <item>Beijing</item>
+        <item>Washington DC</item>
+        <item>Moscow</item>
+        <item>Tokyo</item>
+        <item>Mexico</item>
+        <item>Berlin</item>
+        <item>Cairo</item>
+        <item>Ankara</item>
+        <item>Paris</item>
+        <item>London</item>
+        <item>Rome</item>
+        <item>Madrid</item>
+        <item>Warsaw</item>
+        <item>Amsterdam</item>
+        <item>Athens</item>
+        <item>Lisbon</item>
+        <item>Brussels</item>
+        <item>Tunis</item>
+        <item>Prague</item>
+        <item>Budapest</item>
+        <item>Stockholm</item>
+        <item>Vienna</item>
+        <item>Bern</item>
+        <item>Jerusalem</item>
+        <item>Copenhagen</item>
+        <item>Helsinki</item>
+        <item>Oslo</item>
+        <item>Dublin</item>
+        <item>Luxembourg</item>
+        <item>Vatican City</item>
+        <item>New Delhi</item>
+        <item>Hanoi</item>
+        <item>Addis Ababa</item>
+        <item>Tehran</item>
+        <item>Seoul</item>
+        <item>Buenos Aires</item>
+        <item>Ottawa</item>
+        <item>Kabul</item>
+        <item>Lima</item>
+        <item>Baghdad</item>
+        <item>Pyongyang</item>
+        <item>Taipei</item>
+        <item>Bucharest</item>
+        <item>Canberra</item>
+        <item>Santiago</item>
+        <item>Guatemala</item>
+        <item>Havana</item>
+        <item>Belgrade</item>
+        <item>Minsk</item>
+        <item>Port au Prince</item>
+        <item>Sofia</item>
+        <item>San Salvador</item>
+        <item>Bratislava</item>
+        <item>Abu Dhabi</item>
+        <item>Singapore</item>
+        <item>Sarajevo</item>
+        <item>Zagreb</item>
+        <item>Wellington</item>
+        <item>San Juan</item>
+        <item>Panama</item>
+        <item>Kuwait</item>
+        <item>Riga</item>
+        <item>Skopje</item>
+        <item>Ljubljana</item>
+        <item>Reykjavik</item>
+        <item>Monaco</item>
+        <item>San Marino</item>
+        <item>Jakarta</item>
+        <item>Brasilia</item>
+        <item>Abuja</item>
+        <item>Manila</item>
+        <item>Kinshasa</item>
+        <item>Bangkok</item>
+        <item>Kiev</item>
+        <item>Bogota</item>
+        <item>Nairobi</item>
+        <item>Algiers</item>
+        <item>Kathmandu</item>
+        <item>Riyadh</item>
+        <item>Caracas</item>
+        <item>Kuala Lumpur</item>
+        <item>Colombo</item>
+        <item>Antananarivo</item>
+        <item>Damascus</item>
+        <item>Yaounde</item>
+        <item>Quito</item>
+        <item>Dakar</item>
+        <item>Luanda</item>
+        <item>Harare</item>
+        <item>Conakry</item>
+        <item>Kigali</item>
+        <item>Mogadishu</item>
+        <item>Santo Domingo</item>
+        <item>Sucre</item>
+        <item>Bujumbura</item>
+        <item>Baku</item>
+        <item>Tegucigalpa</item>
+        <item>Dushanbe</item>
+        <item>Asuncion</item>
+        <item>Tripoli</item>
+        <item>Managua</item>
+        <item>Bishkek</item>
+        <item>Ashgabat</item>
+        <item>Asmara</item>
+        <item>Tbilisi</item>
+        <item>Bangui</item>
+        <item>San Jose</item>
+        <item>Beirut</item>
+        <item>Brazzaville</item>
+        <item>Tirana</item>
+        <item>Vilnius</item>
+        <item>Montevideo</item>
+        <item>Ulaanbaatar</item>
+        <item>Kingston</item>
+        <item>Maseru</item>
+        <item>Priština</item>
+        <item>Windhoek</item>
+        <item>Gaborone</item>
+        <item>Bissau</item>
+        <item>Libreville</item>
+        <item>Tallinn</item>
+        <item>Nicosia</item>
+        <item>Manama</item>
+        <item>Thimphu</item>
+        <item>Podgorica</item>
+        <item>Djibouti</item>
+        <item>Paramaribo</item>
+        <item>Macau</item>
+        <item>Valletta</item>
+        <item>Bandar Seri Begawan</item>
+        <item>Nassau</item>
+        <item>Nuuk</item>
+        <item>Vaduz</item>
+        <item>Gibraltar</item>
+        <item>Islamabad</item>
+        <item>Dhaka</item>
+        <item>Rangoon</item>
+        <item>Pretoria</item>
+        <item>Khartoum</item>
+        <item>Dar es Salaam</item>
+        <item>Rabat</item>
+        <item>Kampala</item>
+        <item>Tashkent</item>
+        <item>Accra</item>
+        <item>Sanaa</item>
+        <item>Maputo</item>
+        <item>Yamoussoukro</item>
+        <item>Astana</item>
+        <item>Ouagadougou</item>
+        <item>Phnom Penh</item>
+        <item>Lilongwe</item>
+        <item>Niamey</item>
+        <item>Bamako</item>
+        <item>Lusaka</item>
+        <item>NDjamena</item>
+        <item>Porto Novo</item>
+        <item>Vientiane</item>
+        <item>Freetown</item>
+        <item>Amman</item>
+        <item>Port Moresby</item>
+        <item>Lome</item>
+        <item>Chisinau</item>
+        <item>Nouakchott</item>
+        <item>Monrovia</item>
+        <item>Muscat</item>
+        <item>Yerevan</item>
+        <item>Banjul</item>
+        <item>Port Louis</item>
+        <item>Mbabane</item>
+        <item>Dili</item>
+        <item>Port of Spain</item>
+        <item>Suva</item>
+        <item>Doha</item>
+        <item>Georgetown</item>
+        <item>Moroni</item>
+        <item>Malabo</item>
+        <item>Honiara</item>
+        <item>Praia</item>
+        <item>Belmopan</item>
+        <item>Papeete</item>
+        <item>Bridgetown</item>
+        <item>Cayenne</item>
+        <item>Apia</item>
+        <item>Jamestown</item>
+    </string-array>
+    <string-array name="population">
+        <item>1330045000</item>
+        <item>303825000</item>
+        <item>140702000</item>
+        <item>127288000</item>
+        <item>109955000</item>
+        <item>82370000</item>
+        <item>81714000</item>
+        <item>71893000</item>
+        <item>62100000</item>
+        <item>60944000</item>
+        <item>58145000</item>
+        <item>40491000</item>
+        <item>38501000</item>
+        <item>16645000</item>
+        <item>10723000</item>
+        <item>10677000</item>
+        <item>10404000</item>
+        <item>10384000</item>
+        <item>10221000</item>
+        <item>9931000</item>
+        <item>9045000</item>
+        <item>8206000</item>
+        <item>7582000</item>
+        <item>7112000</item>
+        <item>5485000</item>
+        <item>5245000</item>
+        <item>4644000</item>
+        <item>4156000</item>
+        <item>486000</item>
+        <item>820</item>
+        <item>1147996000</item>
+        <item>86117000</item>
+        <item>78254000</item>
+        <item>65875000</item>
+        <item>49233000</item>
+        <item>40677000</item>
+        <item>33213000</item>
+        <item>32738000</item>
+        <item>29181000</item>
+        <item>28221000</item>
+        <item>23479000</item>
+        <item>22921000</item>
+        <item>22247000</item>
+        <item>20601000</item>
+        <item>16454000</item>
+        <item>13002000</item>
+        <item>11424000</item>
+        <item>10159000</item>
+        <item>9686000</item>
+        <item>8925000</item>
+        <item>7263000</item>
+        <item>7066000</item>
+        <item>5455000</item>
+        <item>4621000</item>
+        <item>4608000</item>
+        <item>4590000</item>
+        <item>4492000</item>
+        <item>4173000</item>
+        <item>3958000</item>
+        <item>3293000</item>
+        <item>2597000</item>
+        <item>2245000</item>
+        <item>2061000</item>
+        <item>2008000</item>
+        <item>304400</item>
+        <item>32800</item>
+        <item>30000</item>
+        <item>237512000</item>
+        <item>191909000</item>
+        <item>138283000</item>
+        <item>92681000</item>
+        <item>66515000</item>
+        <item>65493000</item>
+        <item>45994000</item>
+        <item>45014000</item>
+        <item>37954000</item>
+        <item>33770000</item>
+        <item>29519000</item>
+        <item>28161000</item>
+        <item>26415000</item>
+        <item>25274000</item>
+        <item>21129000</item>
+        <item>20043000</item>
+        <item>19748000</item>
+        <item>18468000</item>
+        <item>13928000</item>
+        <item>12853000</item>
+        <item>12531000</item>
+        <item>12383000</item>
+        <item>10211000</item>
+        <item>10186000</item>
+        <item>9559000</item>
+        <item>9507000</item>
+        <item>9248000</item>
+        <item>8691000</item>
+        <item>8178000</item>
+        <item>7639000</item>
+        <item>7212000</item>
+        <item>6831000</item>
+        <item>6174000</item>
+        <item>5786000</item>
+        <item>5357000</item>
+        <item>5180000</item>
+        <item>5028000</item>
+        <item>4631000</item>
+        <item>4435000</item>
+        <item>4196000</item>
+        <item>3972000</item>
+        <item>3903000</item>
+        <item>3620000</item>
+        <item>3565000</item>
+        <item>3478000</item>
+        <item>2996000</item>
+        <item>2804000</item>
+        <item>2128000</item>
+        <item>2127000</item>
+        <item>2089000</item>
+        <item>1842000</item>
+        <item>1503000</item>
+        <item>1486000</item>
+        <item>1308000</item>
+        <item>792600</item>
+        <item>718300</item>
+        <item>682300</item>
+        <item>678200</item>
+        <item>506200</item>
+        <item>476000</item>
+        <item>460800</item>
+        <item>403500</item>
+        <item>381400</item>
+        <item>307500</item>
+        <item>56300</item>
+        <item>34500</item>
+        <item>28000</item>
+        <item>167762000</item>
+        <item>153547000</item>
+        <item>47758000</item>
+        <item>43786000</item>
+        <item>40218000</item>
+        <item>40213000</item>
+        <item>34343000</item>
+        <item>31368000</item>
+        <item>28268000</item>
+        <item>23383000</item>
+        <item>23013000</item>
+        <item>21285000</item>
+        <item>18373000</item>
+        <item>15341000</item>
+        <item>15265000</item>
+        <item>14242000</item>
+        <item>13932000</item>
+        <item>13273000</item>
+        <item>12324000</item>
+        <item>11670000</item>
+        <item>10111000</item>
+        <item>8295000</item>
+        <item>6678000</item>
+        <item>6295000</item>
+        <item>6199000</item>
+        <item>5932000</item>
+        <item>5859000</item>
+        <item>4324000</item>
+        <item>3365000</item>
+        <item>3335000</item>
+        <item>3312000</item>
+        <item>2969000</item>
+        <item>1735000</item>
+        <item>1274000</item>
+        <item>1129000</item>
+        <item>1109000</item>
+        <item>1047000</item>
+        <item>931700</item>
+        <item>928600</item>
+        <item>770800</item>
+        <item>731800</item>
+        <item>616500</item>
+        <item>581300</item>
+        <item>427000</item>
+        <item>301300</item>
+        <item>283000</item>
+        <item>282000</item>
+        <item>219600</item>
+        <item>217100</item>
+        <item>7600</item>
+    </string-array>
 
 
-<string-array name="colors">
-    <item>#FF007F</item>
-    <item>#FF0000</item>
-    <item>#FF7F00</item>
-    <item>#FFFF00</item>
-    <item>#7FFF00</item>
-    <item>#00FF00</item>
-    <item>#00FF7F</item>
-    <item>#00FFFF</item>
-    <item>#007FFF</item>
-    <item>#0000FF</item>
-    <item>#7F00FF</item>
-    <item>#FF00FF</item>
-</string-array>
+    <string-array name="colors">
+        <item>#FF007F</item>
+        <item>#FF0000</item>
+        <item>#FF7F00</item>
+        <item>#FFFF00</item>
+        <item>#7FFF00</item>
+        <item>#00FF00</item>
+        <item>#00FF7F</item>
+        <item>#00FFFF</item>
+        <item>#007FFF</item>
+        <item>#0000FF</item>
+        <item>#7F00FF</item>
+        <item>#FF00FF</item>
+    </string-array>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
