--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Tap when capital is right!</item>
         <item>Is the sum of both colors is equal?</item>
         <item>5 different shapes!</item>
-
+        <item>Hit when color matches color-word!</item>
     </string-array>
 
     <string-array name="dice">
