--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
         <item>Is the sum of both colors is equal?</item>
         <item>5 different shapes!</item>
         <item>Hit when color matches color-word!</item>
+        <item>Hit when its a win</item>
     </string-array>
 
     <string-array name="dice">
