aggiunto AboutMe.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
         <item>difficult</item>
     </string-array>
     <string name="countdown_txt">3</string>
+    <string name="aboutme">A fast and light offline multiplayer game based on reflexes and reaction times.
+        Challenge up to 4 friends and find who comes out on top!
+        Explore our 7 games which test your knowledge as well as your reflexes. Great as an icebreaker! Have you run out of mobile data? Just press the button faster than your opponent and you will get a point.</string>
 
     <string-array name="explanation">
         <item>Which country has more area?</item>
